# vega

./: .bedrock_agentcore.yaml  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.ui  README.md  main.py  project_vega_postman_collection.json  pyproject.toml  requirements.txt
.bedrock_agentcore/vega_underwriting_agent/: Dockerfile
coaction_agent_platform/adapters/aws/: __init__.py  bedrock_kb_manager.py  boto3_factory.py  cognito.py  dynamodb.py  jwt_verifier.py
coaction_agent_platform/agents/: prompts.py  underwriting_agent.py
coaction_agent_platform/agents/tools/: __init__.py  retriever.py
coaction_agent_platform/app/: main.py
coaction_agent_platform/app/dependencies/: identity.py
coaction_agent_platform/app/middleware/: __init__.py  correlation.py  errors.py
coaction_agent_platform/app/routers/: __init__.py  agent_router.py  auth_router.py  kb_router.py  session_router.py
coaction_agent_platform/control_plane/: __init__.py  agent_registry.py  execution_profile_repository.py
coaction_agent_platform/domain/: models.py
coaction_agent_platform/runtime/: __init__.py  base_agent.py  context_builder.py  host_adapter.py  orchestrator.py  response_composer.py  strands_agent.py
coaction_agent_platform/services/: __init__.py  agent_service.py  audit.py  authorization.py  guardrails.py  memory.py  model_gateway.py  telemetry.py  tool_gateway.py
config/execution_profiles/: underwriting_v1.yaml
ui/: Dockerfile  gradio_app.py
