[project]
name = "project-vega"
version = "0.1.0"
description = "Coaction Agent Platform — Modular underwriting assistant with dynamic KB management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",

    # AWS SDKs
    "boto3>=1.35.0",

    # Agent framework
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",

    # Auth / JWT
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Utilities
    "structlog>=24.4.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",

    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
packages = ["coaction_agent_platform"]
